--- a/debian/rules
+++ b/debian/rules
@@ -1,35 +1,8 @@
 #!/usr/bin/make -f
 
-build: build-stamp
-build-stamp:
-	dh_testdir
-	$(MAKE)
-	touch build-stamp
+%:
+	dh $@ --buildsystem=cmake
 
-clean:
-	dh_testdir
-	dh_testroot
-	-rm -f configure-stamp build-stamp 
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	$(MAKE) install_maemo DESTDIR=`pwd`/debian/9x9-sudoku
-
-binary-indep: build install
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_link -a
-	dh_strip -a
-	dh_compress -a
-	dh_fixperms -a
-	dh_installdeb -a
-	dh_shlibdeps -a
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install 
+override_dh_auto_configure:
+	dh_auto_configure -- \
+	-DCMAKE_BUILD_TYPE=Release
